@@ -21,7 +21,7 @@ angular.module('lmn.session_new').config(function ($routeProvider) {
 
 'use strict';
 
-angular.module('lmn.session_new').service('lmnSession', function ($http, $uibModal, $q, $location, messagebox, validation, notify, gettext) {
+angular.module('lmn.session_new').service('lmnSession', function ($http, $uibModal, $q, $location, identity, messagebox, validation, notify, gettext) {
     var _this = this;
 
     this.sessions = [];
@@ -49,11 +49,12 @@ angular.module('lmn.session_new').service('lmnSession', function ($http, $uibMod
     };
 
     this.start = function (session) {
-        _this.current = session;
+        _this.current = session;console.log(session);console.log(identity.user);
         $http.post('/api/lmn/session/userinfo', { 'users': _this.current.members }).then(function (resp) {
             _this.current.members = resp.data;
             _this.current.generated = false;
             _this.current.type = 'session';
+            _this.current.working_dir = identity.user + '_group_' + session.name;
             $location.path('/view/lmn/session');
         });
     };
@@ -76,7 +77,8 @@ angular.module('lmn.session_new').service('lmnSession', function ($http, $uibMod
             'name': groupname,
             'members': members,
             'generated': true,
-            'type': session_type // May be room or schoolclass or project
+            'type': session_type, // May be room or schoolclass or project
+            'working_dir': identity.user + '_' + session_type + '_' + groupname
         };
         _this.current = generatedSession;
         $location.path('/view/lmn/session');
@@ -221,9 +223,9 @@ angular.module('lmn.session_new').service('lmnSession', function ($http, $uibMod
         visible: true,
         name: gettext('Transfer')
       },
-      workDirectory: {
+      workingDirectory: {
         visible: true,
-        name: gettext('')
+        name: gettext('Working directory')
       },
       sophomorixRole: {
         visible: false,
@@ -592,7 +594,7 @@ angular.module('lmn.session_new').service('lmnSession', function ($http, $uibMod
             return command;
           },
           sessionComment: function() {
-            return sessioncomment;
+            return $scope.session.name;
           }
         }
       }).result.then(function(result) {
@@ -648,7 +650,7 @@ angular.module('lmn.session_new').service('lmnSession', function ($http, $uibMod
             return command;
           },
           sessionComment: function() {
-            return sessioncomment;
+            return $scope.session.name;
           }
         }
       }).result.then(function(result) {
@@ -793,7 +795,7 @@ angular.module('lmn.session_new').service('lmnSession', function ($http, $uibMod
     };
   });
 
-  angular.module('lmn.session_new').controller('LMNSessionFileSelectModalController', function($scope, $uibModalInstance, gettext, notify, $http, bulkMode, senders, receivers, action, command, sessionComment, messagebox) {
+  angular.module('lmn.session_new').controller('LMNSessionFileSelectModalController', function($scope, $uibModalInstance, gettext, notify, $http, bulkMode, senders, receivers, action, command, sessionComment, messagebox, smbclient) {
     $scope.bulkMode = bulkMode;
     $scope.senders = senders;
     $scope.receivers = receivers;
