@@ -1,3 +1,10 @@
+linuxmuster-webui7 (7.2.17) lmn72; urgency=medium
+
+  * Fix security issue with ldap
+  * Update dependency 
+
+ -- Arnaud Kientz <arnaud@linuxmuster.net>  Tue, 11 Jul 2023 11:50:08 +0200
+
 linuxmuster-webui7 (7.2.16) lmn72; urgency=medium
 
   * Add ldap connector and ldap reader to speed up requests
